@@ -26,6 +26,7 @@
 18. Fix some potential security issues - thanks to Jonas Wielicki for the
     patches.
 19. Only set Qt::AA_EnableHighDpiScaling for Windows builds.
+20. Fix sidebar highlight for windows (at least for Windows 10).
 
 2.1.0
 -----
